<resources>
    <string name="app_name">LiteWeather</string>

    <string name="search">search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Select city</string>

    <string name="feeling_by">Feeling by как</string>
    <string name="place_name">City name</string>


    <string name="min_temp"> Min </string>
    <string name="max_temp"> Max </string>
    <string name="temp_metric">℃ </string>
    <string name="feeling">feeling by </string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="feeling_temp">"Feeling "</string>


    <string name="today_button">Today</string>
    <string name="tomorrow_button">Tomorrow</string>
    <string name="week_button">Week</string>
    <string name="tools">tools</string>
    <string name="dark_theme">Dark theme</string>
    <string name="setting_title">Setting</string>
    <string name="history_tytle">search history</string>
    <string name="info_title">contact information</string>
    <string name="nav_open_draw">Open navigation drawer</string>
    <string name="nav_close_draw">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="remove">remove</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="ieeueu_kds_ru" translatable="false">ieeueu@kds.ru</string>
    <string name="_880080080000" translatable="false">880080080000</string>
    <string name="contact_information">Contact information</string>
    <string name="geekapp" translatable="false">GeekApp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="battery_low">Battery low</string>


</resources>
