<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".fragments.TodayWeather">





        <TextView
            android:id="@+id/date_time_current_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="21 апреля, 20:03" />

        <TextView
            android:id="@+id/day_night_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_time_current_text_view_id"
            tools:text="Днем +12; Ночью +2" />

        <TextView
            android:id="@+id/current_temp_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_night_text_view_id"
            tools:text="+10 C" />

        <TextView
            android:id="@+id/feeling_temp_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_temp_text_view_id"
            tools:text="Ощущается как +7 С" />

        <ImageView
            android:id="@+id/image_weather_image_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/current_temp_text_view_id"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/weather_description_text_view_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_weather_image_id"
            tools:text="Переменная облачнотсь" />

    <LinearLayout
        android:id="@+id/weather_details_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_description_text_view_id">



            <TextView
                android:id="@+id/wind_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wind_speed"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/humidity_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/humidity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pressure_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pressure"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/title_min_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/min_temp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_max_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/max_temp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/feeling_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/feeling_temp"
                android:textSize="16sp" />






    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>